--- a/style.css
+++ b/style.css
@@ -3,14 +3,15 @@
     padding: 0px;
     font-family: 'Poppins', Arial, Helvetica, sans-serif;
 }
-body{
-    max-height: 200vh;
+html, body{
+    max-height: 500vh;
     background-image: linear-gradient(to bottom, #0A051B 50%, #754EF9);
+    background-repeat: no-repeat;
 }
 main{
     width: 70%;
     max-width: 900px;
-    max-height: 200vh;
+    max-height: 500vh;
     background-color: #0B051F;
     border-radius: 10px;
     box-shadow: 0 2px 5px #04020c;
@@ -22,7 +23,7 @@ main #apresentacao{
     width: 100%;
     height: 50%;
 }
-main #sobre{
+main #resumo{
     width: 100%;
     height: 50%;
 }
@@ -86,11 +87,11 @@ main #apresentacao header h1{
     transition: 0.3s;
     background-color: #462e94;
 }
-main #sobre{
+main #resumo{
     width: 100%;
     height: 50%;
 }
-main #sobre h1{
+main #resumo h1{
     color: white;
 }
 .resumo-eu{
@@ -112,15 +113,136 @@ header nav a:hover{
 header h1,
 header nav {
     display: inline-block;
-    vertical-align: middle; /* alinha verticalmente */
 }
 .lorem2{
     color: white;
     font-size: 0.8rem;
     max-width: 20rem;
+    margin-bottom: 10rem;
 }
 .negrito{
     color: white;
     font-weight: bold;
     font-size: 0.9rem;
+}
+.servicos{
+    color: white;
+    text-align: center;
+    font-size: 1.7rem;
+    margin-bottom: 3rem;
+}
+.azul{
+    color: #5f3eca;
+}
+.caixa1{
+    max-height: 20rem;
+    max-width: 480px;
+    width: 200px;
+    border-top: 3px solid #5f3eca;
+    border-bottom: 4px solid #5f3eca;
+    border-radius: 7px;
+    padding: 1rem;
+    overflow-wrap: break-word;
+    display: inline-block;
+}
+.caixa1 p{
+    text-align: center;
+    color: white;
+    font-size: 0.7rem;
+}
+.caixa1 h1{
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    font-size: 1rem;
+    margin: 0.7rem;
+}
+.caixa2{
+    max-height: 20rem;
+    max-width: 480px;
+    width: 200px;
+    border-top: 3px solid #5f3eca;
+    border-bottom: 4px solid #5f3eca;
+    border-radius: 7px;
+    padding: 1rem;
+    overflow-wrap: break-word;
+    display: inline-block;
+}
+.caixa2 p{
+    text-align: center;
+    color: white;
+    font-size: 0.7rem;
+}
+.caixa2 h1{
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    font-size: 1rem;
+    margin: 0.7rem;
+}
+.caixa3{
+    max-height: 20rem;
+    max-width: 480px;
+    width: 200px;
+    border-top: 3px solid #5f3eca;
+    border-bottom: 4px solid #5f3eca;
+    border-radius: 7px;
+    padding: 1rem;
+    overflow-wrap: break-word;
+    display: inline-block;
+}
+.caixa3 p{
+    text-align: center;
+    color: white;
+    font-size: 0.7rem;
+}
+.caixa3 h1{
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    font-size: 1rem;
+    margin: 0.7rem;
+}
+@media (max-width:480px) {
+    .caixa1{
+        min-width: 200px;
+        display: block;
+        margin: 0 auto;
+        margin-bottom: 1rem;
+    }
+}
+@media (max-width:480px){
+    .caixa2{
+        min-width: 200px;
+        display: block;
+        margin: 0 auto;
+        margin-bottom: 1rem;
+    }
+}
+@media (max-width:480px){
+    .caixa3{
+        min-width: 200px;
+        display: block;
+        margin: 0 auto;
+        margin-bottom: 5rem;
+        margin-top: 1rem;
+    }
+}
+@media (min-width:1010px){
+    .caixa1, .caixa2, .caixa3{
+        min-width: 29%;
+    }
+}
+@media (max-width:480px){
+    .resumo-eu{
+        margin-left: 0%;
+    }
+}
+@media (max-width:1254px){
+    main h1{
+        display: block;
+    }
+    header nav a{
+        float: left;
+    }
 }
