--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html, body{
     background-repeat: no-repeat;
 }
 main{
-    width: 70%;
+    width: 100%;
     max-width: 900px;
     max-height: 500vh;
     background-color: #0B051F;
@@ -250,5 +250,6 @@ header nav {
     main{
         width: 100%;
         margin: 0% auto 0;
+        overflow-x: hidden;
     }
 }
