--- a/style.css
+++ b/style.css
@@ -204,6 +204,47 @@ header nav {
     font-size: 1rem;
     margin: 0.7rem;
 }
+.caixa1, .caixa2, .caixa3{
+    margin-bottom: 10rem;
+}
+#contato{
+    color: white;
+    text-align: center;
+    margin-bottom: 5rem;
+}
+#email{
+    background-color: white;
+    border: none;
+    border-radius: 5px;
+    width: 15rem;
+    height: 1.5rem;
+    padding: 1rem;
+    font-size: 0.9rem;
+    display: ri;
+}
+label{
+    color: white;
+    margin-right: 2rem;
+}
+input:focus{
+    outline: 2px solid rgb(148, 148, 248);
+}
+#enviar2{
+    width: 10rem;
+    height: 2rem;
+    color: white;
+    background-color: #5f3eca;
+    border: none;
+    margin-top: 2rem;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-bottom: 5rem;
+}
+#enviar2:hover{
+    transform: scale(1.05);
+    transition: 0.3s;
+    background-color: #462e94;
+}
 @media (max-width:480px) {
     .caixa1{
         min-width: 200px;
