--- a/style.css
+++ b/style.css
@@ -66,11 +66,12 @@ main #apresentacao header h1{
     border: 1px solid #5f3eca;
     border-radius: 100%;
     padding: 0.3rem 0.6rem 0.3rem 0.6rem;
+    transition: transform 0.2s ease;
 }
 .icones-sociais a:hover{
     border: 1px solid white;
     color: white;
-    transition: 0.3s;
+    transition: 0.4s;
 }
 #enviar{
     width: 10rem;
@@ -82,6 +83,7 @@ main #apresentacao header h1{
     border-radius: 5px;
     cursor: pointer;
     margin-bottom: 5rem;
+    transition: transform 0.2s ease;
 }
 #enviar:hover{
     transform: scale(1.05);
@@ -137,8 +139,6 @@ header nav {
 }
 .caixa1{
     max-height: 20rem;
-    max-width: 480px;
-    width: 200px;
     border-top: 3px solid #5f3eca;
     border-bottom: 4px solid #5f3eca;
     border-radius: 7px;
@@ -160,8 +160,6 @@ header nav {
 }
 .caixa2{
     max-height: 20rem;
-    max-width: 480px;
-    width: 200px;
     border-top: 3px solid #5f3eca;
     border-bottom: 4px solid #5f3eca;
     border-radius: 7px;
@@ -183,8 +181,6 @@ header nav {
 }
 .caixa3{
     max-height: 20rem;
-    max-width: 480px;
-    width: 200px;
     border-top: 3px solid #5f3eca;
     border-bottom: 4px solid #5f3eca;
     border-radius: 7px;
@@ -220,7 +216,7 @@ header nav {
     height: 1.5rem;
     padding: 1rem;
     font-size: 0.9rem;
-    display: ri;
+    margin-right: 1rem;
 }
 label{
     color: white;
@@ -239,41 +235,17 @@ input:focus{
     border-radius: 5px;
     cursor: pointer;
     margin-bottom: 5rem;
+    transition: transform 0.2s ease;
 }
 #enviar2:hover{
     transform: scale(1.05);
     transition: 0.3s;
     background-color: #462e94;
 }
-@media (max-width:480px) {
-    .caixa1{
-        min-width: 200px;
-        display: block;
-        margin: 0 auto;
-        margin-bottom: 1rem;
-    }
-}
-@media (max-width:480px){
-    .caixa2{
-        min-width: 200px;
-        display: block;
-        margin: 0 auto;
-        margin-bottom: 1rem;
-    }
-}
-@media (max-width:480px){
-    .caixa3{
-        min-width: 200px;
-        display: block;
-        margin: 0 auto;
-        margin-bottom: 5rem;
-        margin-top: 1rem;
-    }
-}
-@media (min-width:1010px){
-    .caixa1, .caixa2, .caixa3{
-        min-width: 29%;
-    }
+#container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(12.5rem, 1fr));
+    gap: 1rem;
 }
 @media (max-width:480px){
     .resumo-eu{
