--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html, body{
 }
 main{
     width: 100%;
-    max-width: 900px;
+    max-width: 1000px;
     max-height: 500vh;
     background-color: #0B051F;
     border-radius: 10px;
@@ -34,7 +34,8 @@ main #resumo{
 }
 main #apresentacao header h1{
     font-size: 1.1rem;
-    margin-right: 27rem;
+    margin-right: 1.5rem;
+    display: inline-block;
 }
 .ola{
     font-size: 1.6rem;
@@ -52,7 +53,7 @@ main #apresentacao header h1{
 
 .lorem{
     color: white;
-    font-size: 0.8rem;
+    font-size: 0.9rem;
     max-width: 16rem;
     margin-bottom: 1.5rem;
 }
@@ -107,20 +108,23 @@ main #resumo h1{
 header nav a{
     color: white;
     text-decoration: none;
-    margin-right: 1rem;
+    margin-right: 1.5rem;
     float: right;
     max-width: 900px;
+    transition: 0.3s ease;
 }
 header nav a:hover{
-    text-decoration: underline;
+    text-decoration: underline 2px solid #462e94;
+    text-underline-offset: 0.2rem;
+    transition: 0.3s;
+    color: #462e94;
 }
-header h1,
 header nav {
-    display: inline-block;
+    float: right;
 }
 .lorem2{
     color: white;
-    font-size: 0.8rem;
+    font-size: 0.9rem;
     max-width: 20rem;
     margin-bottom: 10rem;
 }
@@ -134,6 +138,7 @@ header nav {
     text-align: center;
     font-size: 1.7rem;
     margin-bottom: 3rem;
+    margin-top: 5rem;
 }
 .azul{
     color: #5f3eca;
@@ -223,9 +228,6 @@ label{
     color: white;
     margin-right: 2rem;
 }
-input:focus{
-    outline: 2px solid rgb(148, 148, 248);
-}
 #enviar2{
     width: 10rem;
     height: 2rem;
@@ -248,17 +250,55 @@ input:focus{
     grid-template-columns: repeat(auto-fit, minmax(12.5rem, 1fr));
     gap: 1rem;
 }
+.fixo{
+    color: #462e94;
+    text-decoration: underline 2px solid #462e94;
+    text-underline-offset: 0.2rem;
+}
+.resumo-projetos{
+    max-width: 350px;
+    color: white;
+    margin-bottom: 3rem;
+}
+.container-projetos{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 10px;
+    row-gap: 20px;
+}
+.container-projetos .tag-1 p, h1{
+    color: white;
+}
+.container-projetos .tag-1 h1{
+    font-size: 1.1rem;
+    margin-bottom: 0.5rem;
+}
+.container-projetos .tag-1 p {
+    font-size: 0.9rem;
+}
+.projetos{
+    height: 200px;
+    overflow: hidden;
+    border-radius: 1rem;
+    border: 2px dashed white;
+    transition: transform 0.3s ease;
+}
+.projetos:hover{
+    transform: scale(1.2);
+    transition: 0.4s;
+    box-shadow: 10px 7px 15px rgba(0, 0, 0, 0.466);
+    cursor: pointer;
+}
+.projetos img{
+    width: 100%;
+    height: 100%;
+}
+.tags{
+    display: inline-block;
+}
 @media (max-width:480px){
     .resumo-eu{
         margin-left: 0%;
-    }
-}
-@media (max-width:1254px){
-    main h1{
-        display: block;
-    }
-    header nav a{
-        float: left;
     }
 }
 @media (max-width:480px){
