--- a/style.css
+++ b/style.css
@@ -138,76 +138,31 @@ header nav {
     text-align: center;
     font-size: 1.7rem;
     margin-bottom: 3rem;
-    margin-top: 5rem;
+    margin-top: 7rem;
 }
 .azul{
     color: #5f3eca;
 }
-.caixa1{
-    max-height: 20rem;
-    border-top: 3px solid #5f3eca;
-    border-bottom: 4px solid #5f3eca;
-    border-radius: 7px;
-    padding: 1rem;
-    overflow-wrap: break-word;
-    display: inline-block;
-}
-.caixa1 p{
-    text-align: center;
-    color: white;
-    font-size: 0.8rem;
-}
-.caixa1 h1{
-    text-align: center;
-    color: white;
-    font-weight: bold;
-    font-size: 1rem;
-    margin: 0.7rem;
-}
-.caixa2{
-    max-height: 20rem;
-    border-top: 3px solid #5f3eca;
-    border-bottom: 4px solid #5f3eca;
-    border-radius: 7px;
-    padding: 1rem;
-    overflow-wrap: break-word;
-    display: inline-block;
-}
-.caixa2 p{
-    text-align: center;
-    color: white;
-    font-size: 0.8rem;
-}
-.caixa2 h1{
-    text-align: center;
-    color: white;
-    font-weight: bold;
-    font-size: 1rem;
-    margin: 0.7rem;
-}
-.caixa3{
-    max-height: 20rem;
-    border-top: 3px solid #5f3eca;
-    border-bottom: 4px solid #5f3eca;
-    border-radius: 7px;
-    padding: 1rem;
-    overflow-wrap: break-word;
-    display: inline-block;
-}
-.caixa3 p{
-    text-align: center;
-    color: white;
-    font-size: 0.8rem;
-}
-.caixa3 h1{
-    text-align: center;
-    color: white;
-    font-weight: bold;
-    font-size: 1rem;
-    margin: 0.7rem;
-}
 .caixa1, .caixa2, .caixa3{
-    margin-bottom: 10rem;
+    max-height: 20rem;
+    border-top: 3px solid #5f3eca;
+    border-bottom: 4px solid #5f3eca;
+    border-radius: 7px;
+    padding: 1rem;
+    overflow-wrap: break-word;
+    display: inline-block;
+}
+.caixa1 p, .caixa2 p, .caixa3 p{
+    text-align: center;
+    color: white;
+    font-size: 0.8rem;
+}
+.caixa1 h1, .caixa2 h1, .caixa3 h1{
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    font-size: 1rem;
+    margin: 0.7rem;
 }
 #contato{
     color: white;
@@ -248,7 +203,7 @@ label{
 #container{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(12.5rem, 1fr));
-    gap: 1rem;
+    gap: 2rem 1rem;
 }
 .fixo{
     color: #462e94;
@@ -266,14 +221,14 @@ label{
     gap: 10px;
     row-gap: 20px;
 }
-.container-projetos .tag-1 p, h1{
+.container-projetos p, h1{
     color: white;
 }
-.container-projetos .tag-1 h1{
+.container-projetos h1{
     font-size: 1.1rem;
     margin-bottom: 0.5rem;
 }
-.container-projetos .tag-1 p {
+.container-projetos p {
     font-size: 0.9rem;
 }
 .projetos{
@@ -293,15 +248,46 @@ label{
     width: 100%;
     height: 100%;
 }
-.tags{
+.descricao{
+    margin-top: 1.5rem;
+}
+.tech-1{
+    border: 1px solid white;
+    color: white;
+    margin: 0px;
+    padding: 5px;
+    width: 50px;
+    border-radius: 30%;
+    text-align: center;
     display: inline-block;
+    margin-right: 0.5rem;
+}
+.tech-1:hover{
+    cursor: pointer;
+    border: 1px solid #462e94;
+}
+.tech-2:hover{
+    cursor: pointer;
+    border: 1px solid #462e94;
+    transition: 0.2s;
+}
+.tech-2{
+    border: 1px solid white;
+    color: white;
+    margin: 0px;
+    padding: 5px;
+    width: 50px;
+    border-radius: 30%;
+    text-align: center;
+    display: inline-block;
+}
+.tecnologias{
+    margin-top: 0.8rem;
 }
 @media (max-width:480px){
     .resumo-eu{
         margin-left: 0%;
     }
-}
-@media (max-width:480px){
     main{
         width: 100%;
         margin: 0% auto 0;
