--- a/style.css
+++ b/style.css
@@ -292,6 +292,7 @@ label{
         width: 100%;
         margin: 0% auto 0;
         overflow-x: hidden;
+        padding: 1rem;
     }
 }
 @media (max-width:423px){
