--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     font-family: 'Poppins', Arial, Helvetica, sans-serif;
     box-sizing: border-box;
 }
+html{
+    scroll-behavior: smooth;
+    scroll-padding-top: 7.5rem;
+}
 html, body{
     max-height: 500vh;
     background-image: linear-gradient(to bottom, #0A051B 50%, #754EF9);
@@ -60,7 +64,7 @@ main #apresentacao header h1{
 .fa-linkedin-in{
     color: #5f3eca;
 }
-.icones-sociais a{
+#icones-sociais a{
     color: #5f3eca;
     margin-right: 0.5rem;
     margin-top: 40rem;
@@ -70,7 +74,7 @@ main #apresentacao header h1{
     padding: 0.3rem 0.6rem 0.3rem 0.6rem;
     transition: 0.3s ease;
 }
-.icones-sociais a:hover{
+#icones-sociais a:hover{
     border: 1px solid white;
     color: white;
     transition: 0.4s;
@@ -122,7 +126,7 @@ header nav a:hover{
 header nav {
     float: right;
 }
-.lorem2{
+#lorem2{
     color: white;
     font-size: 0.9rem;
     max-width: 20rem;
@@ -283,6 +287,7 @@ label{
 }
 .tecnologias{
     margin-top: 0.8rem;
+    position: absolute;
 }
 header nav i{
     display: none !important;
@@ -311,5 +316,19 @@ header nav i{
     }
     header nav i{
         display: inline-block !important;
+    }
+}
+@media (max-width:850px){
+    .container-projetos{
+        display: grid;
+        grid-template-columns: repeat(3, minmax(90%, 1fr));
+        overflow-x: auto;
+        box-sizing: border-box;
+    }
+    .container-projetos::-webkit-scrollbar{
+        display: none;
+    }
+    .projetos:hover{
+        transform: scale(1);
     }
 }
