--- a/style.css
+++ b/style.css
@@ -286,7 +286,7 @@ label{
     text-align: center;
     display: inline-block;
 }
-.tecnologias, .tecnologias-2{
+.tecnologias, .tecnologias-2, .tecnologias-3{
     margin-top: 0.8rem;
 }
 header nav i{
